--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -103,17 +103,17 @@ font-cdn: # add font stylesheet, e.g. <link href="https://fonts.googleapis.com/c
 # the template uses Bootstrap Icons, https://icons.getbootstrap.com/
 # find the names on the BI icons page, e.g. file-image
 #
-icons: 
-   icon-image: image
-   icon-audio: soundwave
-   icon-vertical: airplane
-   icon-oblique: airplane-fill
-   icon-index: map
-   icon-video: film
-   icon-pdf: file-pdf
-   icon-record: file-text
-   icon-panorama: image-alt
-   icon-compound-object: collection 
-   icon-multiple: postcard
-   icon-default: file-earmark # fall back icon
-   icon-back-to-top: arrow-up-square
+# icons: 
+# icon-image: image
+# icon-audio: soundwave
+# icon-vertical: airplane
+# icon-oblique: airplane-fill
+# icon-index: map
+# icon-video: film
+# icon-pdf: file-pdf
+# icon-record: file-text
+# icon-panorama: image-alt
+# icon-compound-object: collection 
+# icon-multiple: postcard
+# icon-default: file-earmark # fall back icon
+# icon-back-to-top: arrow-up-square
