--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -64,7 +64,7 @@ year-nav-increment: 5 # set increments to auto gen nav years
 # 
 # add metadata fields for export in data downloads (tip: paste in first row of csv)
 # comma delimited list, reference url is automatic
-metadata-export-fields: "title,creator,date,date is approximate,description,ccc-camp-number,ccc-company-number,subject,source,location,latitude,longitude,format-original,digital collection,format,type,contributing institution,language,identifier,rights,standardized-rights,file name,objectid"
+metadata-export-fields: "title,creator,date,date is approximate,description,ccc-camp-number,ccc-company-number,subject,source,location,latitude,longitude,format-original,digital collection,format,type,contributing institution,language,identifier,rights,rightsstatement,file name,objectid"
 # generate a facets list for given fields, comma delimited
 metadata-facets-fields: "subject,ccc-camp-number,ccc-company-number,location,format-original,format,source"
 
