--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -34,7 +34,7 @@ subjects-stopwords: idaho; # set of subjects separated by ; that will be removed
 #
 locations-fields: country;state;county;city # set of fields separated by ; to be featured in the cloud (leave blank or comment out to not generate)
 locations-min: 1 # min size for subject cloud, too many terms = slow load time!
-locations-stopwords: # set of subjects separated by ; that will be removed from display, e.g. boxers;boxing
+locations-stopwords: idaho # set of subjects separated by ; that will be removed from display, e.g. boxers;boxing
 
 ##########
 # MAP PAGE
