--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ digital-assets: https://www.lib.uidaho.edu/assets
 # title of site appears in banner
 title: Potlatch Historical Society Collection
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Depicting life in and around Potlatch, Idaho from 1880 to 2023
+tagline: Depicting life in and around Potlatch, Idaho from 1880 to 2024
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "A digital collection comprised of 3,180 photographs and documents from Potlatch and surrounding areas."
+description: "A digital collection comprised of about 3,500 photographs and documents from Potlatch and surrounding areas."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
 keywords: idaho;history;inland northwest;potlatch;
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
